--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -17,13 +17,58 @@
 }
 @font-face {
   font-family: 'Hackernoon';
-  src: url(../fonts/hackernoon-regular-webfont.woff2) format('woff2'),
-       url(../fonts/hackernoon-regular-webfont.woff) format('woff'),
-       url(../fonts/hackernoon-regular-webfont.ttf) format('truetype');
+  src: url(../fonts/hackernoonv2-regular-webfont.woff2) format('woff2'),
+       url(../fonts/hackernoonv2-regular-webfont.woff) format('woff'),
+       url(../fonts/hackernoonv2-regular-webfont.ttf) format('truetype');
 }
 
-@media only screen and (max-width: 375px) {
-  body {
-    color: lightblue;
-  }
+* {
+  font-family: 'Electrolize';
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
+
+p {
+  margin: 0;
+  padding: 0;
+}
+
+h2 {
+  font-family: 'Electrolize';
+  font-size: 1.2em;
+  color: var(--color-secondary);
+}
+
+hr {
+  width: 50%;
+  border : 1px solid var(--color-secondary);
+}
+
+.generic-wrapper {
+  margin: 12px;
+}
+
+.illustration {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
+}
+.illustration-section {
+  background-image: url('../imgs/Backgrounds/backgroundMain.png');
+}
+.illustration-section p {
+  font-size: 22px;
+  font-family: 'Calibri';
+  font-style: italic;
+  color: white;
+  padding: 68px 18px;
+  line-height: 32px;
+  letter-spacing: 4px;
+}
+
+@media only screen and (min-width: 375px) {
+  
 }
