Add basic carousel

--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -91,7 +91,7 @@ a:hover{
 }
 
 
-@media only screen and (min-width: 375px) {
+@media only screen and (min-width: 480px) {
   .backgroundHeader {
     display: flex;
     flex-direction: row;
@@ -127,26 +127,20 @@ h2 {
   color: var(--color-secondary);
 }
 
-.big-reservation-title {
-  font-family: 'Electrolize';
-  font-size: 2.5em;
-  color: white;
-  text-align: center;
-  font-family: 'Times New Roman', Times, serif;
-}
-
 hr {
   width: 50%;
   border : 1px solid var(--color-secondary);
 }
 
+/*Main illustrated section*/
+.illustration-section {
+  background-image: url('../imgs/Backgrounds/backgroundMain.png');
+  padding-bottom: 20px;
+}
 .illustration {
   width: 100%;
   height: 500px;
   object-fit: cover;
-}
-.illustration-section {
-  background-image: url('../imgs/Backgrounds/backgroundMain.png');
 }
 .illustration-section p {
   font-size: 22px;
@@ -158,11 +152,17 @@ hr {
   letter-spacing: 4px;
 }
 
+/* booking section*/
 .primary-title-back-stroke {
   color: var(--color-primary);
   text-align: center;
 }
-
+.big-reservation-title {
+  font-size: 2.5em;
+  color: white;
+  text-align: center;
+  font-family: 'Times New Roman', Times, serif;
+}
 #bottom-illustration-text {
   text-align: center;
   color: grey;
@@ -171,14 +171,65 @@ hr {
   letter-spacing: 2px;
   font-style: normal;
 }
-
 #reservation-button {
   width: 50px;
   border: 3px solid var(--color-primary);
-  margin: auto;
+  margin: 25px auto;
   padding: 12px 24px;
   color: var(--color-primary);
   font-size: 16px;
   cursor: pointer;
   text-align: center;
+}
+#reservation-button:hover {
+  background-color: var(--color-primary);
+  color: black;
+  transition: 0.5s;
+}
+
+/*reviews section*/
+#reviews-title {
+  position: relative;
+  top: 24px;
+  font-family: 'Times New Roman', Times, serif;
+  text-align: center;
+  font-size: 2em;
+  padding: 12px;
+  line-height: 22px;
+}
+#reviews-title::before {
+  content: "“";
+  position: absolute;
+  top: -20px;
+  left: 50%;
+  font-size: 58px;
+  font-weight: bold;
+  color: var(--color-primary);
+}
+
+/*Carousel*/
+.carousel {
+  position: relative;
+  text-align: center;
+  margin-bottom: 20px;
+}
+.carousel-pictures {
+  display: flex;
+  overflow: hidden;
+}
+.carousel-picture, .carousel-main-picture {
+  min-width: 100%;
+  transition: transform 0.5s ease-in-out;
+}
+.carousel-dot {
+  display: inline-block;
+  width: 10px;
+  height: 10px;
+  background: gray;
+  border-radius: 50%;
+  margin: 5px;
+  cursor: pointer;
+}
+.carousel-dot.active {
+  background: black;
 }
