--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -172,6 +172,13 @@ nav {
   justify-content: center;
 }
 
+/* FORMULAIRE */ 
+
+.containerFormulaire{
+  width: 50%;
+}
+
+
 @media only screen and (min-width: 480px) {
   .backgroundHeader {
     display: flex;
