Add basic reservation form structure

--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -5,8 +5,8 @@
 
 @font-face {
   font-family: "Electrolize";
-  src: url(../fonts/Electrolize-Regular.woff2) format("woff2"),
-    url(../fonts/Electrolize-Regular.woff) format("woff"),
+  src: url(../fonts/electrolize-regular-webfont.woff2) format("woff2"),
+    url(../fonts/bevietnam-lightitalic-webfont.woff) format("woff"),
     url(../fonts/Electrolize-Regular.ttf) format("truetype");
 }
 @font-face {
@@ -273,6 +273,7 @@ h2 {
   font-size: 16px;
   cursor: pointer;
   text-align: center;
+  background-color: black;
 }
 #reservation-button:hover {
   background-color: var(--color-primary);
@@ -373,8 +374,39 @@ footer p {
 .footer-copyright {
   font-size: 0.8em;
   opacity: 0.5;
-
   p {
     margin: 0;
   }
+}
+
+/* Reservation page */
+.yellow-text {
+  color: var(--color-primary);
+}
+.ntr-title {
+  font-family: 'Times New Roman', Times, serif;
+  font-weight: bold;
+}
+.title-smaller {
+  font-size: 0.8em;
+}
+.title-normal {
+  font-size: 1em;
+}
+.reservation-form-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 20px;
+}
+#form-reservation-button-final {
+  width: 100%;
+  border: 3px solid var(--color-primary);
+  margin: 12px auto;
+  padding: 4px;
+  color: white;
+  font-size: 16px;
+  cursor: pointer;
+  text-align: center;
+  background-color: var(--color-primary);
 }
