--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -466,12 +466,12 @@ footer p {
   color: var(--color-primary);
   transition: 0.5s;
 }
-=======
+
 /* LOGIN PAGE */
 
 #login-form {
   background-color: rgb(217, 217, 217);
-  padding: 3rem;
+  padding: 12px;
   border-radius: 8px;
 }
 
