avec persistance du style quand change de lien nav et scroll contact

--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -105,10 +105,11 @@ nav {
   color: white;
 }
 
-.navLink:hover {
+.navLink:hover, .navLink.active {
   cursor: pointer;
   color: var(--color-primary);
 }
+
 
 /* MENU */
 .containerMenu {
