--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -95,6 +95,11 @@ nav {
   font-size: 12px;
 }
 
+#deconnexion-btn {
+  color: red !important;
+  /* visibility: hidden; */
+}
+
 .titrePrincipal {
   font-family: "Hackernoon";
   color: white;
@@ -109,6 +114,7 @@ nav {
   cursor: pointer;
   color: var(--color-primary);
 }
+
 
 /* MENU */
 .containerMenu {
