--- a/public/assets/css/global.css
+++ b/public/assets/css/global.css
@@ -335,6 +335,19 @@ h2 {
   transition: 0.5s;
 }
 
+#checkbox-RGPD {
+  margin-left: 6px;
+  width: auto;
+}
+
+/* RGPD */
+
+#RGPD {
+  margin: 10px;
+}
+
+
+
 /* Reviews section */
 #reviews-title {
   position: relative;
@@ -470,7 +483,7 @@ footer p {
     }
   }
 }
-#form-reservation-button-final {
+#form-reservation-button-final, #form-reservation-RGPD  {
   width: 100%;
   border: 3px solid var(--color-primary);
   margin: 12px auto;
